Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4974

Bad debug assert in HttpSM::handle_server_setup_error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 7.0.0
    • 7.1.0
    • Core
    • None

    Description

      When running with debug_enable, the non-release assert in HttpSM::handle_server_setup_error sometimes goes off.

      ink_assert(server_entry->read_vio == data);

      In the crash case, the data corresponds to server_entry->write_vio. Reviewing the function, I don't see why it is bad that this function is called with the write vio. The actual IO operations are performed against server_entry->read_vio and server_entry->write_io instead of the parameter vio directly.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m