TS-4974: Bad debug assert in HttpSM::handle_server_setup_error